--- a/views/homepage/section.ejs
+++ b/views/homepage/section.ejs
@@ -1,9 +1,3 @@
-<%
-let color = [
-'info','primary','warning','secondary','danger','dark','info','primary','warning','secondary'
-]
-%>
-
 <div class="container">
     <!-- HERO -->
     <div class="heroDiv">
@@ -26,13 +20,13 @@ let color = [
                 <div class="row">
                     <div class="col-6 py-2">
                         <div class="text-center" name="<%=i%>" onmouseover="showBTN(this)" onmouseout="hideBTN(this)">
-                            <a href="/find/<%= data[i].pr_id %>">
+                            <a href="/find/<%= data[0].pizza[i].pr_id %>">
                                 <img class="my-2 cardImg cardImg<%=i%>"
-                                    src="../../products/images/pizza/<%= data[i].pr_img %>">
+                                    src="../../products/images/pizza/<%= data[0].pizza[i].pr_img %>">
                             </a>
-                            <h6 style="height: 30px"><%= data[i].pr_name %></h6>
+                            <h6 style="height: 30px"><%= data[0].pizza[i].pr_name %></h6>
 
-                            <p class="text-muted" style="font-size: 12px; height: 60px"><%= data[i].pr_info %></p>
+                            <p class="text-muted" style="font-size: 12px; height: 60px"><%= data[0].pizza[i].pr_info %></p>
 
                             <table class="w-100">
                                 <thead>
@@ -44,15 +38,15 @@ let color = [
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>₹<%= data[i].pr_price.size_reg %></td>
-                                        <td>₹<%= data[i].pr_price.size_med %></td>
-                                        <td>₹<%= data[i].pr_price.size_lrg %></td>
+                                        <td>₹<%= data[0].pizza[i].pr_price.size_reg %></td>
+                                        <td>₹<%= data[0].pizza[i].pr_price.size_med %></td>
+                                        <td>₹<%= data[0].pizza[i].pr_price.size_lrg %></td>
                                     </tr>
                                 </tbody>
                             </table>
 
 
-                            <button class="mt-1 w-100 btn btn-danger" name="<%=data[i].pr_id%>"
+                            <button class="mt-1 w-100 btn btn-danger" name="<%=data[0].pizza[i].pr_id%>"
                                 onclick="addToCart(this)" style="visibility: hidden;" id="addToCartBtn<%=i%>">
                                 Add to Cart
                                 <i class="fas fa-shopping-cart"></i>
@@ -64,14 +58,14 @@ let color = [
                     <!-- Pizza panel second row start -->
                     <div class="col-6 py-2">
                         <div class="text-center" name="<%=i+1%>" onmouseover="showBTN(this)" onmouseout="hideBTN(this)">
-                            <a href="/find/<%= data[i+1].pr_id %>">
+                            <a href="/find/<%= data[0].pizza[i+1].pr_id %>">
                                 <img class="my-2 cardImg cardImg<%=i+1%>"
-                                    src="../../products/images/pizza/<%= data[i+1].pr_img %>">
+                                    src="../../products/images/pizza/<%= data[0].pizza[i+1].pr_img %>">
                             </a>
 
-                            <h6 style="height: 30px"><%= data[i+1].pr_name %></h6>
+                            <h6 style="height: 30px"><%= data[0].pizza[i+1].pr_name %></h6>
 
-                            <p class="text-muted" style="font-size: 12px; height: 60px"><%= data[i+1].pr_info %></p>
+                            <p class="text-muted" style="font-size: 12px; height: 60px"><%= data[0].pizza[i+1].pr_info %></p>
 
                             <table class="w-100">
                                 <thead>
@@ -83,14 +77,14 @@ let color = [
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>₹<%= data[i+1].pr_price.size_reg %></td>
-                                        <td>₹<%= data[i+1].pr_price.size_med %></td>
-                                        <td>₹<%= data[i+1].pr_price.size_lrg %></td>
+                                        <td>₹<%= data[0].pizza[i+1].pr_price.size_reg %></td>
+                                        <td>₹<%= data[0].pizza[i+1].pr_price.size_med %></td>
+                                        <td>₹<%= data[0].pizza[i+1].pr_price.size_lrg %></td>
                                     </tr>
                                 </tbody>
                             </table>
 
-                            <button class="mt-1 w-100 btn btn-danger" name="<%=data[i+1].pr_id%>"
+                            <button class="mt-1 w-100 btn btn-danger" name="<%=data[0].pizza[i+1].pr_id%>"
                                 onclick="addToCart(this)" style="visibility: hidden;" id="addToCartBtn<%=i+1%>">
                                 Add to Cart
                                 <i class="fas fa-shopping-cart"></i>
@@ -104,7 +98,7 @@ let color = [
     </div>
     <!-- Pizza panel end-->
     </div>
-    <!-- Burgers panel start--> 
+    Burgers panel start 
     <div class="burgers mt-3">
         <h4 class="text-center">                
             <img src="../../images/bgrIcon.png" class="img-fluid" style="width: 30px;">
@@ -121,13 +115,13 @@ let color = [
                     <div class="col-6 py-2">
                         <div class="text-center" name="<%=4*(j)%>" onmouseover="showBTN(this)"
                             onmouseout="hideBTN(this)">
-                            <a href="/find/<%= burgers[i].pr_id %>">
+                            <a href="/find/<%= data[1].burgers[i].pr_id %>">
                                 <img class="my-2 cardImg cardImg<%=i%>"
-                                    src="../../products/images/burgers/<%= burgers[i].pr_img %>">
+                                    src="../../products/images/burgers/<%= data[1].burgers[i].pr_img %>">
                             </a>
-                            <h6 style="height: 30px"><%= burgers[i].pr_name %></h6>
-                            <p> <strong>Price: </strong>₹<%= burgers[i].pr_price%> </p>
-                            <button class="mt-1 w-100 btn btn-danger" name="<%=burgers[i].pr_id%>"
+                            <h6 style="height: 30px"><%= data[1].burgers[i].pr_name %></h6>
+                            <p> <strong>Price: </strong>₹<%= data[1].burgers[i].pr_price%> </p>
+                            <button class="mt-1 w-100 btn btn-danger" name="<%=data[1].burgers[i].pr_id%>"
                                 onclick="addToCart(this)" style="visibility: hidden;" id="addToCartBtn<%=4*(j)%>">
                                 Add to Cart
                                 <i class="fas fa-shopping-cart"></i>
@@ -140,13 +134,13 @@ let color = [
                     <div class="col-6 py-2">
                         <div class="text-center" name="<%=4*(j+1)%>" onmouseover="showBTN(this)"
                             onmouseout="hideBTN(this)">
-                            <a href="/find/<%= burgers[i+1].pr_id %>">
+                            <a href="/find/<%= data[1].burgers[i+1].pr_id %>">
                                 <img class="my-2 cardImg cardImg<%=i%>"
-                                    src="../../products/images/burgers/<%= burgers[i+1].pr_img %>">
+                                    src="../../products/images/burgers/<%= data[1].burgers[i+1].pr_img %>">
                             </a>
-                            <h6 style="height: 30px"><%= burgers[i+1].pr_name %></h6>
-                            <p> <strong>Price: </strong>₹<%= burgers[i+1].pr_price%> </p>
-                            <button class="mt-1 w-100 btn btn-danger" name="<%=burgers[i+1].pr_id%>"
+                            <h6 style="height: 30px"><%= data[1].burgers[i+1].pr_name %></h6>
+                            <p> <strong>Price: </strong>₹<%= data[1].burgers[i+1].pr_price%> </p>
+                            <button class="mt-1 w-100 btn btn-danger" name="<%=data[1].burgers[i+1].pr_id%>"
                                 onclick="addToCart(this)" style="visibility: hidden;" id="addToCartBtn<%=4*(j+1)%>">
                                 Add to Cart
                                 <i class="fas fa-shopping-cart"></i>
@@ -178,15 +172,15 @@ let color = [
                     <div class="col-6 py-2">
                         <div class="text-center" name="<%=4*(j)%>" onmouseover="showBTN(this)"
                             onmouseout="hideBTN(this)">
-                            <a href="/find/<%= beverages[i].pr_id %>">
+                            <a href="/find/<%= data[2].beverages[i].pr_id %>">
                                 <img class="my-2 cardImg cardImg<%=i%>"
-                                    src="../../products/images/beverages/<%= beverages[i].pr_img %>">
+                                    src="../../products/images/beverages/<%= data[2].beverages[i].pr_img %>">
                             </a>
-                            <h6 style="height: 30px"><%= beverages[i].pr_name %></h6>
-                            <p class="text-muted" style="font-size: 12px; height: 60px"><%= beverages[i].pr_info %>
+                            <h6 style="height: 30px"><%= data[2].beverages[i].pr_name %></h6>
+                            <p class="text-muted" style="font-size: 12px; height: 60px"><%= data[2].beverages[i].pr_info %>
                             </p>
-                            <p> <strong>Price: </strong>₹<%= beverages[i].pr_price%> </p>
-                            <button class="mt-1 w-100 btn btn-danger" name="<%=beverages[i].pr_id%>"
+                            <p> <strong>Price: </strong>₹<%= data[2].beverages[i].pr_price%> </p>
+                            <button class="mt-1 w-100 btn btn-danger" name="<%=data[2].beverages[i].pr_id%>"
                                 onclick="addToCart(this)" style="visibility: hidden;" id="addToCartBtn<%=4*(j)%>">
                                 Add to Cart
                                 <i class="fas fa-shopping-cart"></i>
@@ -199,15 +193,15 @@ let color = [
                     <div class="col-6 py-2">
                         <div class="text-center" name="<%=4*(j+1)%>" onmouseover="showBTN(this)"
                             onmouseout="hideBTN(this)">
-                            <a href="/find/<%= beverages[i+1].pr_id %>">
+                            <a href="/find/<%= data[2].beverages[i+1].pr_id %>">
                                 <img class="my-2 cardImg cardImg<%=i%>"
-                                    src="../../products/images/beverages/<%= beverages[i+1].pr_img %>">
+                                    src="../../products/images/beverages/<%= data[2].beverages[i+1].pr_img %>">
                             </a>
-                            <h6 style="height: 30px"><%= beverages[i+1].pr_name %></h6>
+                            <h6 style="height: 30px"><%= data[2].beverages[i+1].pr_name %></h6>
                             <p class="text-muted" style="font-size: 12px; height: 60px">
-                                <%= beverages[i+1].pr_info %></p>
-                            <p> <strong>Price: </strong>₹<%= beverages[i+1].pr_price%> </p>
-                            <button class="mt-1 w-100 btn btn-danger" name="<%=beverages[i+1].pr_id%>"
+                                <%= data[2].beverages[i+1].pr_info %></p>
+                            <p> <strong>Price: </strong>₹<%= data[2].beverages[i+1].pr_price%> </p>
+                            <button class="mt-1 w-100 btn btn-danger" name="<%=data[2].beverages[i+1].pr_id%>"
                                 onclick="addToCart(this)" style="visibility: hidden;" id="addToCartBtn<%=4*(j+1)%>">
                                 Add to Cart
                                 <i class="fas fa-shopping-cart"></i>
@@ -219,6 +213,6 @@ let color = [
             </span>
             <%}%>    
     </div>
-    <!-- beverages panel end-->
+    <!-- beverages panel end -->
     </div> 
 </div>
