--- a/views/brandpage/home.ejs
+++ b/views/brandpage/home.ejs
@@ -1,3 +1,3 @@
-<%- include header %>
+<%- include ../homepage/header %>
 <%- include section %>
-<%- include footer %>
+<%- include ../homepage/footer %>
