Data flow of recommended items

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,15 +10,16 @@
 .hero:hover{
     transform: scale(1.01);
     transition: 0.1s;
-    cursor: pointer;    
-    
+    cursor: pointer;  
 }
-
 .heading{    
     border-bottom: 2px solid orange;
 }
 .cardImg{
     width: 140px;
+}
+.itemImg{
+    width: 200px;
 }
 .cardImg0:hover,
 .cardImg1:hover,
