--- a/views/itempage/section.ejs
+++ b/views/itempage/section.ejs
@@ -58,15 +58,20 @@ let type2 = typeof itemDoc.recommended[1].pr_price;
 
         <!-- Recommended items -->
         <div class="col-md-6">
+            <h4 class="text-center">
+                <span style="border-bottom: 2px solid orange">Also Add</span>
+            </h4>
             <div class="row">
                 <!-- First recommended item -->
-                <div class="col-6">
+                <div class="col-6 mt-3">
                     <div class="text-center">
-                        <a href="/find/<%= itemDoc.recommended[0].pr_id %>">
-                            <img class="my-2 cardImg" src="<%= path1 %>">
-                        </a>
-                        <h6 style="height: 20px"><%= itemDoc.recommended[0].pr_name %></h6>
-                        <p class="text-muted" style="font-size: 12px; height: 30px">
+                        <div class="imgDiv mx-auto">
+                            <a href="/find/<%= itemDoc.recommended[0].pr_id %>">
+                                <img class="recImg img-fluid" src="<%= path1 %>">
+                            </a>
+                        </div>
+                        <h6 class="mt-3" style="height:30px;"><%= itemDoc.recommended[0].pr_name %></h6>
+                        <p class="text-muted" style="font-size: 12px; height:50px;">
                             <%= itemDoc.recommended[0].pr_info %>
                         </p>
 
@@ -94,13 +99,15 @@ let type2 = typeof itemDoc.recommended[1].pr_price;
                 </div>
 
                 <!-- Second recommended item -->
-                <div class="col-6">
+                <div class="col-6 mt-3">
                     <div class="text-center">
-                        <a href="/find/<%= itemDoc.recommended[1].pr_id %>">
-                            <img class="my-2 cardImg" src="<%= path2 %>">
-                        </a>
-                        <h6 style="height: 20px"><%= itemDoc.recommended[1].pr_name %></h6>
-                        <p class="text-muted" style="font-size: 12px; height: 30px">
+                        <div class="imgDiv mx-auto">
+                            <a href="/find/<%= itemDoc.recommended[1].pr_id %>">
+                                <img class="recImg img-fluid" src="<%= path2 %>">
+                            </a>
+                        </div>
+                        <h6 class="mt-3" style="height:30px;"><%= itemDoc.recommended[1].pr_name %></h6>
+                        <p class="text-muted" style="font-size: 12px; height:50px;">
                             <%= itemDoc.recommended[1].pr_info %>
                         </p>
 
